--- a/MySimpleWeb/Content/Site.css
+++ b/MySimpleWeb/Content/Site.css
@@ -1,5 +1,5 @@
 ﻿body {
-    padding-top : 40px;
+    padding-top: 40px;
     padding-bottom: 20px;
 }
 
@@ -17,190 +17,104 @@ textarea {
 }
 
 
-/*About Logging*/
+/*About TraceHub*/
 li.even {
-    background-color : lightgray;
-}
-
-span.Critical{color: #800000}
-span.Error{color:#FF0000}
-span.Warning{color:#FFA500}
-span.Info{color:#0000FF}
-span.Verbose{color:#808080}
-span.Misc{color:#2F4F4F}
-
-span.time{background-color : #66a9a9}
-span.origin{background-color:burlywood}
-/*Logging*/
-
-div.moduleCategory{
-    background-color:mintcream;
-}
-
-input.moduleItem{
-    padding-left:30px;
-}
-
-fieldset.modules {
-    margin: 8px;
-    border: 1px solid silver;
-    padding: 18px;
-    border-radius: 4px;
-    display:table-cell;
-    width:250px;
-}
-
-label {
-    font-weight: normal !important;
-}
-
-/*
-    Z does not like some of the styles in bootstrap. So custom some here.
-*/
-
-table {
-    border-spacing: 2px;
-    border-collapse: collapse;
-    background-color: transparent;
-}
-
-td,
-th {
-    padding: 4px;
-}
-
-
-th {
-    text-align: left;
-}
-
-
-/*override bootstrap to have some spaces betwwen text boxes*/
-.col-md-10 {
-    margin-bottom: 5px;
-}
-
-
-
-
-
-/*Style used in jquery ui*/
-.watermark::-moz-placeholder {
-    color: #999;
-    opacity: 1;
-}
-
-.watermark:-ms-input-placeholder {
-    color: #999;
-}
-
-.watermark::-webkit-input-placeholder {
-    color: #999;
-}
-
-
-/*style of generated content*/
-div.result {
-    background-color: lightcyan;
-}
-
-div.info {
     background-color: lightgray;
 }
 
-div.resultHint {
-    color: brown;
+ul#traces {
 }
 
-.resultItem:hover {
-    background-color: yellow;
-}
-
-.actionItem:hover {
-    background-color: greenyellow;
-}
-
-
-/*Button will show when the parent is hover over */
-
-.dynamic {
-    visibility: hidden;
-}
-
-.dynamicButton:hover .dynamic {
-    visibility: visible;
-}
-
-/*This refine some basic attributes of class btn of bootstrap to make it smaller*/
-.symbol {
-    font-size: large;
-    margin: 0px 0px 0px 0px;
+span.et {
+    width: 4em;
     display: inline-block;
-    
-    padding: 0px 0px 0px 0px;
-    font-weight: normal;
-    line-height: 1.42857143;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: middle;
-    -ms-touch-action: manipulation;
-    touch-action: manipulation;
-    cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    background-image: none;
-    border: 1px solid transparent;
-    border-radius: 4px;
+    margin-right: 10px;
+}
+
+span.Critical {
+    color: #800000;
+}
+
+span.Error {
+    color: #FF0000;
+}
+
+span.Warning {
+    color: #FFA500;
+}
+
+span.Info {
+    color: #0000FF;
+}
+
+span.Verbose {
+    color: #808080;
+}
+
+span.Misc {
+    color: #2F4F4F;
+}
+
+span.time {
+    background-color: #66a9a9;
+    min-width: 4em;
+    display: inline-block;
+    margin-right: 6px;
+}
+
+span.origin {
+    background-color: burlywood;
+    min-width: 4em;
+    display: inline-block;
+    margin-right: 6px;
 }
 
 
-.modal-content {
-    width: 70% !important;
-    margin: 30px auto !important;
+.navbar{
+    background-color : darkblue;
 }
 
 
-.table-noborder {
-    border: none;
+.hc-type{
+    background-color: lightblue;
+    display: inline-block;
+    margin-right: 6px;
 }
 
-.table-noborder > thead > tr > th,
-.table-noborder > tbody > tr > th,
-.table-noborder > tfoot > tr > th,
-.table-noborder > thead > tr > td,
-.table-noborder > tbody > tr > td,
-.table-noborder > tfoot > tr > td {
-    border: none;
-    border-spacing : 0em;
-    margin : 0px 0px 0px 0px;
+.hc-userAgent{
+    background-color: lightgreen;
+    display: inline-block;
+    margin-right: 6px;
+} 
+
+.hc-ip{
+    background-color: lightgoldenrodyellow;
+    display: inline-block;
+    margin-right: 6px;
 }
 
-.compact1 > thead > tr > th,
-.compact1 > tbody > tr > th,
-.compact1 > tfoot > tr > th,
-.compact1 > thead > tr > td,
-.compact1 > tbody > tr > td,
-.compact1 > tfoot > tr > td {
-    padding : 1px;
+.hc-template{
+    background-color: lightsalmon;
+    display: inline-block;
+    margin-right: 6px;
 }
 
-
-
-textarea.form-editor {
-    width:80%;
-    height:auto;
-
+.hc-user{
+    background-color: lightskyblue;
+    display: inline-block;
+    margin-right: 6px;
 }
 
-pre.detail-item {
-/*inline-block make the .symbol button appear in the same line*/
-  display: inline-block;
-  word-break: break-all;
-  word-wrap: break-word;
-  background-color: #f5f5f5;
-  border: none;
-  margin-bottom : 0px;
+.hc-id{
+    background-color: lightcyan;
+    display: inline-block;
+    margin-right: 6px;
 }
+
+/*Advanced features are invisible by default*/
+.advanced{
+    display : none;
+}
+
+/*TraceHub*/
 
